<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kyomaru-ClickerCounter</string>
    <string name="action_settings">Settings</string>
    <string name="create">Create Counter</string>
    <string name="newname">Create Counter</string>
    <string name="entercountername">Enter Name of New Counter: </string>
    <string name="newcountercreation">New Counter Creation</string>
    <string name="exitcount">Exit Counting Mode</string>
    <string name="reset">Reset This Counter</string>
    <string name="delete">Delete This Counter</string>
    <string name="order">Order Counters By Count</string>
    <string name="resumecount">Resume Counting Mode</string>
    <string name="sbh">Get Statistics By Hour</string>
    <string name="sbd">Get Statistics By Day</string>
    <string name="sbw">Get Statistics By Week</string>
    <string name="sbm">Get Statistics By Month</string>
    <string name="countermenu">Go to Counter Menu</string>
    <string name="rename">Rename This Counter</string>
    <string name="deletecountertitle">Delete This Counter</string>
    <string name="deleteconfirm">Delete</string>
    <string name="deletecancel">Cancel</string>
    <string name="resetcountertitle">Reset This Counter</string>
    <string name="resetconfirm">Reset</string>
    <string name="resetcancel">Cancel</string>
    <string name="renamecounter">Rename Counter</string>
    <string name="renamecounterbutton">Rename</string>
	<string name="ok">OK</string>
	<string name="hourlystatstitle">Hourly Counter Statistics</string>
	<string name="dailystatstitle">Daily Counter Statistics</string>
	<string name="weeklystatstitle">Weekly Counter Statistics</string>
	<string name="monthlystatstitle">Monthly Counter Statistics</string>

</resources>
